tests/rustdoc-ui/math/unused-doc-syntax.stderr
error: unused doc comment
  --> $DIR/unused-doc-syntax.rs:16:1
   |
LL |   #[doc(syntax="+tex_math_dollars")]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / unsafe extern "C" {
LL | |     pub unsafe fn quux();
LL | | }
   | |_- rustdoc does not generate documentation for extern blocks
   |
   = help: use `//` for a plain comment
note: the lint level is defined here
  --> $DIR/unused-doc-syntax.rs:2:9
   |
LL | #![deny(unused_doc_comments)]
   |         ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

